# arrow_converter

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
cmake/: Cache.cmake  Sanitizers.cmake  StaticAnalyzers.cmake
examples/: CMakeLists.txt  convert_arrow.cpp  convert_json.cpp
src/: CMakeLists.txt  api.hpp  helper.cpp  helper.hpp  json_reader.cpp  json_reader.hpp  json_writer.cpp  json_writer.hpp
test/: CMakeLists.txt  json_reader_test.cpp  json_writer_test.cpp
